# zotero-arxiv-daily

./: .gitignore  README.md  main.py  paper.py  pyproject.toml
src/: __init__.py  config.py  construct_email.py  database.py  logger.py  main.py  paper.py
test/: test_logger.py
