[project]
name = "zotero-arxiv-daily"
version = "0.1.0"
description = "A customized version of zotero-arxiv-daily that pulls arXiv papers daily and sends personalized email digests based on your Zotero library."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.1.3",
    "llama-cpp-python>=0.3.2",
    "loguru>=0.7.2",
    "pyzotero>=1.5.25",
    "scikit-learn>=1.5.2",
    "sentence-transformers>=3.3.1",
    "python-dotenv>=1.0.1",
    "feedparser>=6.0.11",
    "tqdm>=4.67.0",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
